--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="Wrap">
-        <header>
+        <header class="header">
             <div class="main_nav">
                 <h1>
                     <a href="">
@@ -34,7 +34,7 @@
             </div>
         </header>
 
-        <main>
+        <main class="main">
             <section class="main_page">
                 <div class="main_video">
                     <video src="./img/main_video01.mp4" autoplay loop muted playsinline class="vd01"></video>
@@ -271,7 +271,6 @@
                     </figure>
                 </div>
             </section>
-
         </main>
     </div>
 
@@ -280,8 +279,40 @@
 
 
 
+    <!-- 가운데 로고박는 디자인있나 찾아보기 -->
+    <footer class="footer">
+        <div class="container">
+            <div class="logo">
+                <a href="">
+                    <img src="./img/footerLogo.png" alt="">
+                </a>
+            </div>
+            <div class="logo_p">
+                <p>Vive Libremente. Brinda Responsablemente.</p>
+            </div>
+            <ul>
+                <li><a href="">문의하기</a></li>
+                <li><a href="">자주하는 질문</a></li>
+                <li><a href="">이용약관</a></li>
+                <li><a href="">개인정보 정책</a></li>
+                <li><a href="">영양성분</a></li>
+               
+            </ul>
+            <div class="sns">
+                <a href="https://instagram.com/JackDaniels_US" target="_blank"><i class="xi-instagram"></i></a>
+                <a href="https://twitter.com/JackDaniels_US" target="_blank"><i
+                        class="xi-twitter"></i></a>
+                <a href="https://facebook.com/jackdaniels" target="_blank"><i class="xi-facebook"></i></a>
+                <a href="https://www.youtube.com/user/JackDaniels" target="_blank"><i class="xi-youtube-play"></i></a>
+            </div>
+            <div class="copyright">
+                <p>JD are trademarks of Jack Daniel's Properties, Inc. <br>
+                     ©2022. All rights reserved. <br>
+ All other trademarks are the property of their respective owners.</p>
+            </div>
+        </div>
 
-    <footer>
+
 
     </footer>
 
