--- a/index.html
+++ b/index.html
@@ -296,19 +296,18 @@
                 <li><a href="">이용약관</a></li>
                 <li><a href="">개인정보 정책</a></li>
                 <li><a href="">영양성분</a></li>
-               
+
             </ul>
             <div class="sns">
                 <a href="https://instagram.com/JackDaniels_US" target="_blank"><i class="xi-instagram"></i></a>
-                <a href="https://twitter.com/JackDaniels_US" target="_blank"><i
-                        class="xi-twitter"></i></a>
+                <a href="https://twitter.com/JackDaniels_US" target="_blank"><i class="xi-twitter"></i></a>
                 <a href="https://facebook.com/jackdaniels" target="_blank"><i class="xi-facebook"></i></a>
                 <a href="https://www.youtube.com/user/JackDaniels" target="_blank"><i class="xi-youtube-play"></i></a>
             </div>
             <div class="copyright">
                 <p>JD are trademarks of Jack Daniel's Properties, Inc. <br>
-                     ©2022. All rights reserved. <br>
- All other trademarks are the property of their respective owners.</p>
+                    ©2022. All rights reserved. <br>
+                    All other trademarks are the property of their respective owners.</p>
             </div>
         </div>
     </footer>
