--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jack Daniel's Tennessee Whiskey | Jack Daniel's</title>
     <link rel="icon" href="/img/favicon.ico" type="image/vnd.microsoft.icon" />
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/jquery.mb.YTPlayer.min.css">
