--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                     우리가 직접 만든 수제 오크통에서 숙성시킵니다.<br>
                                     오늘날 우리는 여전히 그 방법을 고수해오고 있습니다.
 
-                                <h4 class="taste01">Tasting Notes</h4>
+                                <h4 class="taste01">Tasting Notes <i class="xi-caret-down-min"></i></h4>
                                 <div class="Tasting_Notes_rows 01">
                                     <div class="label">
                                         <p>Aroma</p>
@@ -75,7 +75,7 @@
                                         <p>부드러운 마무리</p>
                                     </div>
                                 </div>
-                                <h4 class="info01">Information</h4>
+                                <h4 class="info01">Information <i class="xi-caret-down-min"></i></h4>
                                 <div class="Information_rows 02">
                                     <div class="label">
                                         <p>종류</p>
@@ -104,7 +104,7 @@
                                 <h3>Jack Daniel's Honey</h3>
                                 <p>잭 다니엘의 테네시 위스키와 독특한 꿀 리큐어의 혼합으로,<br> 독특한 맛의 잭입니다. 자연스러운 꿀의 풍미와 부드러운 끝맛의 <br> 잭 다니엘의
                                     테네시 허니는 새로운 맛을 선사합니다.</p>
-                                <h4 class="taste02">Tasting Notes</h4>
+                                <h4 class="taste02">Tasting Notes <i class="xi-caret-down-min"></i></h4>
                                 <div class="Tasting_Notes_rows 03">
                                     <div class="label">
                                         <p>Aroma</p>
@@ -117,7 +117,7 @@
                                         <p>풍부한 마무리</p>
                                     </div>
                                 </div>
-                                <h4 class="info02">Information</h4>
+                                <h4 class="info02">Information <i class="xi-caret-down-min"></i></h4>
                                 <div class="Information_rows 04">
                                     <div class="label">
                                         <p>종류</p>
@@ -147,7 +147,7 @@
                                 <p>젠틀맨 잭은 숙성에 다다른 후
                                     다시 추가적으로 숯을 통한 <br> 여과 과정을 한번 더 거침으로써
                                     좀 더 깨끗하고 정제된 궁극적인 부드러움을 주정에 부여합니다</p>
-                                <h4 class="taste03">Tasting Notes</h4>
+                                <h4 class="taste03">Tasting Notes <i class="xi-caret-down-min"></i></h4>
                                 <div class="Tasting_Notes_rows 05">
                                     <div class="label">
                                         <p>Aroma</p>
@@ -160,7 +160,7 @@
                                         <p>부드러운 마무리</p>
                                     </div>
                                 </div>
-                                <h4 class="info03">Information</h4>
+                                <h4 class="info03">Information <i class="xi-caret-down-min"></i></h4>
                                 <div class="Information_rows 06">
                                     <div class="label">
                                         <p>종류</p>
@@ -189,7 +189,7 @@
                                 <h3>Jack Daniel's Rye</h3>
                                 <p>1866년 이후 처음으로 선보이는 새로운레시피 <br> 기존의 호밀함량과 곡물함량을 뒤집은 맵고 복잡하지만<br> 부드럽고 독특한 맛과 향의
                                     호밀위스키입니다 </p>
-                                <h4 class="taste04">Tasting Notes</h4>
+                                <h4 class="taste04">Tasting Notes <i class="xi-caret-down-min"></i></h4>
                                 <div class="Tasting_Notes_rows 07">
                                     <div class="label">
                                         <p>Aroma</p>
@@ -202,7 +202,7 @@
                                         <p>여운이 남는 후추의 따뜻함</p>
                                     </div>
                                 </div>
-                                <h4 class="info04">Information</h4>
+                                <h4 class="info04">Information <i class="xi-caret-down-min"></i></h4>
                                 <div class="Information_rows 08">
                                     <div class="label">
                                         <p>종류</p>
@@ -311,5 +311,6 @@
     <script src="./js/jquery.mb.YTPlayer.min.js"></script>
     <script src="./js/slick.min.js"></script>
     <script src="./js/main.js"></script>
+</body>
 
 </html>
